# bevy_experiments

./: Cargo.toml  README.md  cake-addict-20413cc36a9f7902.js  cake-addict-28f582af7a39f280.js  cake-addict-4395a97addf661f6.js  cake-addict-545547a3a31648ff.js  cake-addict-8139821d9cb5cb94.js  cake-addict-f66397b513f2bef8.js  cake-addict-fed4ef2bcc9bc8d.js  clippy.toml  design-document.md  index.html
.github/workflows/: release.yaml
assets/: material_shader.wgsl
config/: default.yml  forest.yml  mini.yml
design/: rogue-giants-document.md
design/cake-addict/: cakeaddictfont.xcf
roguelike/: Cargo.toml  README.md
roguelike/src/: camera.rs  main.rs  map.rs  map_builder.rs  monsters.rs  player.rs
roguelike/src/map/: map.rs  map_builder.rs  map_position.rs  mod.rs  tile_map.rs
shader_example/: Cargo.toml
shader_example/src/: main.rs
src/: actions.rs  audio.rs  camera.rs  cleanup.rs  collision.rs  config.rs  hud.rs  lib.rs  loading.rs  main.rs  menu.rs  monsters.rs  player.rs  stages.rs
src/actors/: items.rs  mod.rs  monsters.rs  player.rs
src/actors/components/: health.rs  mod.rs
src/components/: carried.rs  damage.rs  map_position.rs  mod.rs  name.rs
src/entities/: items.rs  mod.rs  monsters.rs  npc.rs  player.rs  quest.rs  tile.rs
src/entities/actors/: mod.rs  monsters.rs  npc.rs  player.rs
src/entities/items/: dungeonmap.rs  healing.rs  mod.rs  weapon.rs  winitem.rs
src/game_ui/: health_bar.rs  hud.rs  inventory.rs  mod.rs  quests.rs  tooltip.rs
src/map/: djikstra.rs  map_builder.rs  map_position.rs  mod.rs  tile.rs  tile_map.rs
src/map/grid_graph/: base_map.rs  djikstra.rs  djikstra_map.rs  mod.rs  neighbours.rs
src/map/grid_map/: base_map.rs  djikstra.rs  djikstra_map.rs  mod.rs
src/map/map_builder/: automata.rs  drunkard.rs  empty.rs  mod.rs  prefab.rs  standard.rs
src/systems/: chasing_player.rs  collisions.rs  combat.rs  fov.rs  health.rs  inventory.rs  mod.rs  movement.rs  name.rs  player_input.rs  quest.rs  quest_engine.rs  random_actor.rs
