[package]
name = "cake-addict"
description = """
A dungeon crawler with proc-gen levels, and fighting the evil health gurus.
"""
version = "0.1.0"
publish = false
authors = ["Sky Brewer <jaco.brewer@gmail.com>"]
edition = "2021"
exclude = ["dist", "build", "assets", "credits"]

[profile.dev.package."*"]
opt-level = 3

[profile.dev]
opt-level = 1

[profile.release]
lto = true
codegen-units = 1

[features]
dev = ["bevy/dynamic"]

[dependencies]
bevy = { version = "0.8", default-features = false, features = [
    "bevy_asset",
    "bevy_winit",
    "render",
    "png",
    "x11",
] }
bevy_kira_audio = { version = "0.12" }
bevy_asset_loader = { version = "0.12", features = ["2d"] }
bevy-inspector-egui = "0.13.0"
bevy_turborand = "0.3"
ndarray = { version = "0.15.6" }
nannou_core = "0.18"
iyes_loopless = "0.7.1"

# keep the following in sync with Bevy's dependencies
winit = { version = "0.26.0", default-features = false }
image = { version = "0.24", default-features = false }

[build-dependencies]
embed-resource = "1.4"
