[package]
name = "roguelike"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nannou_core = "0.18"
bevy = { version = "0.8", features = ["dynamic"] }
bevy_shader_utils = { version = "0.3" }
ndarray = { version = "0.15.6" }
rand = "0.8.5"

[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3
